# botflow

./: README.md  pyproject.toml
.github/workflows/: ci.yml
botflow/: __init__.py  flow.py  hooks.py  logger.py  plugins.py  retry.py  step.py
examples/: exemplo_basico.py
tests/: conftest.py  test_flow.py  test_hooks.py  test_retry.py
