[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "botflow"
version = "0.1.0"
description = "Orquestrador de automações em Python com retry, hooks e plugins"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["automação", "rpa", "orquestração", "bot", "botcity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
